<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <ImageView
            android:id="@+id/imageViewTop"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="250dp"
            android:contentDescription="@string/icon"
            android:background="@drawable/news" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/lorem_ipsum_dolor"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/sit_amet_consectetur_adipisicing_elit"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/maxime_mollitia_molestiae_quas"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/commodi_repudiandae_quas"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/provident_similique_accusantium_nemo_autem"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:text="@string/related_stories"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/newspaper"
                android:contentDescription="@string/icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/lorem"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/iure_eius_earum_ut_molestias"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/quo_neque_repudiandae"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/ipsa_laudantium"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>